tests/snapshots/snapshots__fixture_tomli_level2.snap
---
source: tests/snapshots.rs
expression: output
---
__init__.py
     5→__all__ = ("loads", "load", "TOMLDecodeError")
     6→__version__ = "2.4.0"  # DO NOT EDIT THIS LINE MANUALLY. LET bump2version UTILITY DO IT
_parser.py
    19→TYPE_CHECKING = False
    35→MAX_INLINE_NESTING: Final = sys.getrecursionlimit()
    37→ASCII_CTRL: Final = frozenset(chr(i) for i in range(32)) | frozenset(chr(127))
    41→ILLEGAL_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t")
    42→ILLEGAL_MULTILINE_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t\n")
    44→ILLEGAL_LITERAL_STR_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    45→ILLEGAL_MULTILINE_LITERAL_STR_CHARS: Final = ILLEGAL_MULTILINE_BASIC_STR_CHARS
    47→ILLEGAL_COMMENT_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    49→TOML_WS: Final = frozenset(" \t")
    50→TOML_WS_AND_NEWLINE: Final = TOML_WS | frozenset("\n")
    51→BARE_KEY_CHARS: Final = frozenset(
    54→KEY_INITIAL_CHARS: Final = BARE_KEY_CHARS | frozenset("\"'")
    55→HEXDIGIT_CHARS: Final = frozenset("abcdef" "ABCDEF" "0123456789")
    57→BASIC_STR_ESCAPE_REPLACEMENTS: Final = MappingProxyType(
    71→class DEPRECATED_DEFAULT:
    76→class TOMLDecodeError(ValueError):
    87→    def __init__(
   137→def load(__fp: IO[bytes], *, parse_float: ParseFloat = float) -> dict[str, Any]:
   149→def loads(__s: str, *, parse_float: ParseFloat = float) -> dict[str, Any]:
   220→class Flags:
   229→    def __init__(self) -> None:
   233→    def add_pending(self, key: Key, flag: int) -> None:
   236→    def finalize_pending(self) -> None:
   241→    def unset_all(self, key: Key) -> None:
   249→    def set(self, key: Key, flag: int, *, recursive: bool) -> None:  # noqa: A003
   260→    def is_(self, key: Key, flag: int) -> bool:
   278→class NestedDict:
   279→    def __init__(self) -> None:
   283→    def get_or_create_nest(
   300→    def append_nest_to_list(self, key: Key) -> None:
   312→class Output:
   313→    def __init__(self) -> None:
   318→def skip_chars(src: str, pos: Pos, chars: Iterable[str]) -> Pos:
   327→def skip_until(
   349→def skip_comment(src: str, pos: Pos) -> Pos:
   361→def skip_comments_and_array_ws(src: str, pos: Pos) -> Pos:
   370→def create_dict_rule(src: str, pos: Pos, out: Output) -> tuple[Pos, Key]:
   390→def create_list_rule(src: str, pos: Pos, out: Output) -> tuple[Pos, Key]:
   413→def key_value_rule(
   447→def parse_key_value_pair(
   463→def parse_key(src: str, pos: Pos) -> tuple[Pos, Key]:
   481→def parse_key_part(src: str, pos: Pos) -> tuple[Pos, str]:
   497→def parse_one_line_basic_str(src: str, pos: Pos) -> tuple[Pos, str]:
   502→def parse_array(
   528→def parse_inline_table(
   564→def parse_basic_str_escape(
   595→def parse_basic_str_escape_multiline(src: str, pos: Pos) -> tuple[Pos, str]:
   599→def parse_hex_char(src: str, pos: Pos, hex_len: int) -> tuple[Pos, str]:
   612→def parse_literal_str(src: str, pos: Pos) -> tuple[Pos, str]:
   621→def parse_multiline_str(src: str, pos: Pos, *, literal: bool) -> tuple[Pos, str]:
   652→def parse_basic_str(src: str, pos: Pos, *, multiline: bool) -> tuple[Pos, str]:
   684→def parse_value(
   760→def is_unicode_scalar_value(codepoint: int) -> bool:
   764→def make_safe_parse_float(parse_float: ParseFloat) -> ParseFloat:
_re.py
    11→TYPE_CHECKING = False
    17→_TIME_RE_STR: Final = r"""
    26→RE_NUMBER: Final = re.compile(
    45→RE_LOCALTIME: Final = re.compile(_TIME_RE_STR, flags=re.VERBOSE)
    46→RE_DATETIME: Final = re.compile(
    59→def match_to_datetime(match: re.Match[str]) -> datetime | date:
    99→def cached_tz(hour_str: str, minute_str: str, sign_str: str) -> timezone:
   109→def match_to_localtime(match: re.Match[str]) -> time:
   116→def match_to_number(match: re.Match[str], parse_float: ParseFloat) -> Any:
_types.py
